syntax = "proto3";

package Balance;

message BalanceInput {
    string userId = 1;
    string currency = 2;
}

message Balance {
    int32 balance = 1;
}